+ replace DataStream classes by i/ostream classes
+ start standardization of API of exported Python classes
+ implement standard factory in Base::Type
+ remove Feature and ViewProvider Factory, use Standard
+ using update instead of recompute after load document
+ using c++ name in addFeature()
+ updating the installer files
+ fixing the build Dist scripts
+ implementing Comment for Save picture
+ implement MIBA
+ use type system in workbench classes
+ VC8 Port
+ Property Pre Callback
+ Property Lists started
+ FeatureTest
+ Run script from Editor

Version: V0.5B5 Date: Sat Feb 25 18:49:43 2006 +++++++++++++++++++++++++++++++
+ Make use of AC_LIBTOOL_DLOPEN macro for Unix/Linux based systems to allow to
  create modules.
+ Create a loader module (without 'lib' prefix ) for each shared library (with 'lib' prefix)
+ The dirty hack to create symlinks during installation has been removed.
+ Builder3D Visual debuging facility
+ set default tabwidth in editor to 4 char, can be changed in user settings
+ block comment/uncomment implemented
+ Undo/Redo of block comment or uncomment implemented
+ Bug in DocItem class fixed: allow only one item with the same name
+ set the dirty flag after Gui::Document has been changed, remove after saving the document
+ WildMagic dllexport define (patch 1441148)
+ fix assert if missing feature (patch 1441146)
+ new modules (patches 1441103, 1441082)
+ Fixes for new modules (patch 1441145)
+ Specify orthographic or perspective camera in user settings
+ Ignore built files in Python script for creation of modules
+ Fixing Bug 1442521,
+ turn backface culling on/off (RFE 1443940). Seems to work properly with convex geometries only
+ Enabled two-side rendering for meshes in case it is not a solid
+ Return the edge list by reference in mesh kernel (to avoid memory leak)
+ PropertyVectorList implemented
+ Use PropertyVectorLists and PropertyFloatLists in Mesh::Curvature feature and its associated view provider
+ PropertyColor(List) implemeted